# autotrainer

./: .gitignore  README-zh.md  README.md  pyproject.toml
autotrainer/: __init__.py  __main__.py  config.py  errors.py
autotrainer/cli/: data_cmd.py  main.py  report_cmd.py  resume_cmd.py  run_cmd.py  status_cmd.py  train_cmd.py
autotrainer/context/: budget.py  store.py  summarizer.py  token_counter.py
autotrainer/core/: __init__.py  interfaces.py  legacy_importer.py  registry.py  store.py
autotrainer/managers/: data_agent.py  data_dashboard.py  data_manager.py  data_pipeline.py  env_manager.py  eval_manager.py  raw_inspector.py  sandbox.py  train_manager.py
autotrainer/metrics/: __init__.py  compute.py  efficiency.py  ocr_metrics.py
autotrainer/orchestrator/: agent.py  health_monitor.py  pipeline.py  pipeline_v2.py  recovery.py  scheduler.py  state_machine.py
autotrainer/pf_integration/: config_builder.py  dataset_validator.py  format_converter.py  launcher.py  log_parser.py
autotrainer/phases/: __init__.py  ablation.py  data_prepare.py  env_check.py  evaluation.py  full_training.py  report.py  task_confirm.py
autotrainer/services/: __init__.py  (+2 more)
docs/: ablation-report.md  autotrainer-whitepaper.md  data-format-guide.md  detection_example_bboxes.json  ocr_crop_examples.json
scripts/: download_arabic_ocr.sh  validate_architecture.py  visualize_annotations.py
tests/: test_config_builder.py  test_log_parser.py  test_phases.py  test_pipeline.py  test_ratio_ablation.py  test_registry.py  test_scheduler.py  test_services.py  test_store.py
(+51 files in other folders)
